@@ -3,7 +3,7 @@
 # Copyright (C) 2020, 2021, 2022, 2023, 2024, 2025 by Pierre Rouleau
 
 # Author: Pierre Rouleau <prouleau001@gmail.com>
-# Last Modified Time-stamp: <2025-10-08 13:38:32 EDT, updated by Pierre Rouleau>
+# Last Modified Time-stamp: <2025-10-12 22:14:22 EDT, updated by Pierre Rouleau>
 # Keywords: packaging, build-control
 
 # This file is part of the PEL package
@@ -228,9 +228,10 @@ EL_FILES := pel--base.el \
 		pel-read.el \
 		pel-register.el \
 		pel-regexp.el \
-		pel-rst.el \
 		pel-rpm-spec.el \
+		pel-rst.el \
 		pel-ruby.el \
+		pel-rust.el \
 		pel-scheme.el \
 		pel-screen.el \
 		pel-scroll.el \
@@ -765,6 +766,7 @@ pel-prompt.elc:         pel--base.elc pel--options.elc
 pel-read.elc:           pel-navigate.elc
 pel-rst.elc:            pel--base.elc pel--options.elc pel-whitespace.elc pel--macros.elc pel-ccp.elc pel-bookmark.elc pel-file.elc
 pel-ruby.elc:           pel--base.elc pel--options.elc pel-ccp.elc
+pre-rust.elc:          pel--base.elc pel--options.elc
 pel-sh.elc:             pel--base.elc
 pel-shell.elc:          pel--options.elc
 pel-scheme.elc:         pel-comint.elc pel-window.elc
