@@ -15,12 +15,18 @@ PEL -- Pragmatic Emacs Library --  NEWS         -*- org -*-
   - It automatically associates the tree-sitter based *rust-ts-mode* with Rust
     files when *pel-use-rust* customizable user-option is set to the new value
     =with-tree-sitter=. If it is set to =t= it select the classic *rust-mode*.
+  - User can switch anytime and can also use one or the other mode for a given
+    buffer: that has no influence on the mode selected for other Rust buffers
+    opened later.
 - PEL activates Javascript support extension when the *pel-use-js* is turned
   on (set to =t=).
 - PEL now support both *go-mode* and Tree-Sitter based *go-ts-mode*.
   - It automatically associates the tree-sitter based *go-ts-mode* with GO
     files when *pel-use-go* customizable user-option is set to the new value
     =with-tree-sitter=. If it is set to =t= it select the classic *go-mode*.
+  - User can switch anytime and can also use one or the other mode for a given
+    buffer: that has no influence on the mode selected for other Rust buffers
+    opened later.
   - Also simplified the customization: the *pel-use-go-mode* user option is no
     longer used: setting *pel-use-go* is enough to request its installation.
     It is installed even if Go support done by Tree Sitter is requested.
